Adding date time

--- a/src/app/main/layout/cargo/loading-sheet/loading-sheet.component.html
+++ b/src/app/main/layout/cargo/loading-sheet/loading-sheet.component.html
@@ -176,7 +176,7 @@
                                             {{cargoBooking.paymentType}}
                                         </td>
                                         <td>
-                                            {{cargoBooking.messages[cargoBooking.messages.length - 1]}}
+                                            {{cargoBooking.messages}}
                                         </td>
                                         <td>
                                             <a class="cus-a" style="color: #007bff;" *ngIf="!cargoBooking.reviewComment"
