--- a/src/app/main/layout/maintenance/jobs/add-edit-jobs/add-edit-jobs.component.html
+++ b/src/app/main/layout/maintenance/jobs/add-edit-jobs/add-edit-jobs.component.html
@@ -110,7 +110,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr *ngFor="let jb of listOfTyres; let i = index">
+                                <tr *ngFor="let jb of latestJobs; let i = index">
                                     <td>{{i + 1}}</td>
                                     <td>{{jb.jobDate | date}}</td>
                                     <td>{{jb.attrs.type}}</td>
@@ -120,7 +120,7 @@
                                 </tr>
                                 </tbody>
                                 <tfoot>
-                                <tr *ngIf="!listOfTyres || listOfTyres.length === 0">
+                                <tr *ngIf="!latestJobs || latestJobs.length === 0">
                                     <td colspan="6">No-Data</td>
                                 </tr>
                                 </tfoot>
