Adding date time

--- a/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
+++ b/src/app/main/layout/customer-reports/service-feedback/service-feedback-report/service-feedback-report.component.html
@@ -66,7 +66,7 @@
                                         <td>{{i + 1}}</td>
                                         <td>{{ feedback.pnr }} - {{feedback.seats}} <br />
                                             <label>From:</label> {{feedback.from}} - <label>To:</label> {{feedback.to}} <br />
-                                           <label>Boarding:</label> {{feedback.boardingPoint}}</td>
+                                           <label>Boarding:</label> {{feedback.boardingPoint}}<label>Dropping:</label> {{feedback.droppingPoint}}</td>
                                         <td>{{ feedback.name }} - <b>{{ feedback.phone }}</b> - {{feedback.email}}</td>
                                         <td>{{feedback.bookedBy}}</td>
                                         <td>
