Adding total collection amount

--- a/src/app/main/layout/cargo/branch-booking-summary/branch-booking-summary.component.html
+++ b/src/app/main/layout/cargo/branch-booking-summary/branch-booking-summary.component.html
@@ -130,8 +130,8 @@
                                     <td>{{summaryData.toPayDeliveryTotal}}</td>
                                     <td>{{summaryData.onAccountBookingsTotal}}</td>
                                     <td>{{summaryData.cancelledTotal}}</td>
-                                    <td></td>
-                                    <td>{{summaryData.paidBookingsTota + summaryData.toPayDeliveryTotal}}</td>
+                                    <td>{{summaryData.paidBookingsTotal + summaryData.topayBookingsDeliveredTotal}}</td>
+                                    <td>{{summaryData.paidBookingsTotal + summaryData.toPayDeliveryTotal}}</td>
                                 </tr>
                                 <tr>
                                     <td colspan="3" class="text-right">(A + C) : {{summaryData.paidBookingsTotal +
