--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -460,6 +460,11 @@
                             <i class="icon fa fa-search-plus" aria-hidden="true"></i>Search Ticket
                         </a>
                     </li>
+                    <li class="waves-effect waves-light">
+                        <a class="treeView-item" [routerLink]="['WhatsUpAppConversations']" [routerLinkActive]="['active']">
+                            <i class="icon fa fa-whatsapp" aria-hidden="true"></i>WhatsApp Conversations
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
