--- a/src/app/main/layout/reports/due-reports/due-reports.component.html
+++ b/src/app/main/layout/reports/due-reports/due-reports.component.html
@@ -58,10 +58,17 @@
         <div class="col-lg-12 col-md-12" *ngIf="tab === 2">
             <div class="tile">
                 <div class="tile-body">
+                    <div class="row p-3" style="align-items: center;">
+                        <div class="col-sm-12 text-right">
+                            <button type="button" class="btn btn-sm btn-primary" (click)="dueReportExportToExcel()">Export To
+                                Excel
+                            </button>
+                        </div>
+                    </div>
                     <div class="col-sm-12 mb-2 mt-2">
                         <div class="row form-group">
                             <div class="col-sm-12 table-responsive">
-                                <table class="table table-bordered table-hover text-center">
+                                <table class="table table-bordered table-hover text-center" id="dueReportExcelData">
                                     <thead>
                                     <tr>
                                         <th>S No</th>
