--- a/src/app/main/layout/reports/due-reports/due-reports.component.html
+++ b/src/app/main/layout/reports/due-reports/due-reports.component.html
@@ -118,15 +118,33 @@
             <thead>
             <tr>
                 <th>S No</th>
-                <th>BookedBy</th>
-                <th>PNR</th>
-                <th>Passenger</th>
-                <th>Seat</th>
-                <th>Service#</th>
-                <th>Route</th>
-                <th>JourneyDate</th>
-                <th>BookedOn</th>
-                <th>Due</th>
+<!--                <th>BookedBy</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="bookedBy">BookedBy<i class="fa fa-sort"></i></th>
+<!--                <th>PNR</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="ticketNo">PNR<i class="fa fa-sort"></i></th>
+<!--                <th>Passenger</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="name">Passenger<i class="fa fa-sort"></i></th>
+<!--                <th>Seat</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="seats">Seats<i class="fa fa-sort"></i></th>
+<!--                <th>Service#</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="serviceNumber">Service#<i class="fa fa-sort"></i></th>
+<!--                <th>Route</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="source">Route<i class="fa fa-sort"></i></th>
+<!--                <th>JourneyDate</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="jdate">JourneyDate<i class="fa fa-sort"></i></th>
+<!--                <th>BookedOn</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="bookedDate">BookedOn<i class="fa fa-sort"></i></th>
+<!--                <th>Due</th>-->
+                <th scope="col" [appFrentendSort]="dueByDateListView"
+                    data-order="desc" data-name="netAmt">Due<i class="fa fa-sort"></i></th>
                 <th>Pay</th>
             </tr>
             </thead>
